--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 
 @use "reset";
+@use "colors";
+@use "variables";
 @use "theme";
-@use "theme-dark";
-@use "light";
-@use "dark";
 @use "eu";
 @use "mixin";
 @use "screen" as *;
+
+@use "element-plus";
 @use "element-plus-patch";
-@use "mcss";
+@use "vxe-ui";
